--- a/banner_rotator/templates/admin/banner_rotator/banner/change_form.html
+++ b/banner_rotator/templates/admin/banner_rotator/banner/change_form.html
@@ -3,6 +3,6 @@
 {% load i18n %}
 
 {% block object-tools-items %}
-    <li><a href="history/" class="historylink">{% trans "History" %}</a></li>
-    <li><a href="log/clicks/" class="historylink">{% trans "Log clicks" %}</a></li>
+    <li><a href="history/" class="historylink">{% trans "history" %}</a></li>
+    <li><a href="log/clicks/" class="historylink">{% trans "clicks log" %}</a></li>
 {% endblock %}
